--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -23,7 +23,7 @@ html
       var siteRoot = '!{appconfig.host}';
 
     //- JS / CSS
-    //- script(type='text/javascript', src='/js/libs.min.js')
+    script(type='text/javascript', src='/js/vendor.min.js')
     script(type='text/javascript', src='/js/app.min.js')
 
     block head
