--- a/client/scss/components/form.scss
+++ b/client/scss/components/form.scss
@@ -161,6 +161,15 @@
 	font-size: 14px;
 	font-weight: 500;
 	display: block;
+
+  strong {
+    @each $color, $colorvalue in $material-colors {
+      &.is-#{$color} {
+        color: mc($color, '600');
+      }
+    }
+  }
+
 }
 
 .form-sections {
