fix: Path with slash display issue in Not Found error page

--- a/server/views/error-forbidden.pug
+++ b/server/views/error-forbidden.pug
@@ -18,7 +18,7 @@ html(data-logic='error')
     link(rel='manifest', href='/manifest.json')
 
     // JS / CSS
-    //- script(type='text/javascript', src='/js/libs.min.js')
+    script(type='text/javascript', src='/js/vendor.min.js')
     script(type='text/javascript', src='/js/app.min.js')
 
   body(class='is-forbidden')
