feat: updated icons to Nucleo

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -27,6 +27,7 @@ $primary: 'indigo';
 @import 'components/table';
 @import 'components/typography';
 
+@import 'libs/nucleo-icons';
 @import 'libs/twemoji-awesome';
 @import 'libs/jquery-contextmenu';
 @import 'node_modules/highlight.js/styles/atom-one-dark';
