--- a/server/views/common/header.pug
+++ b/server/views/common/header.pug
@@ -5,7 +5,7 @@
       block rootNavLeft
         a.nav-item(href='/')
           h1
-            i.icon-layers
+            i.nc-icon-outline.ui-2_layers
             = appconfig.title
     .nav-center
       block rootNavCenter
