--- a/server/views/error-forbidden.pug
+++ b/server/views/error-forbidden.pug
@@ -6,25 +6,25 @@ html(data-logic='error')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='theme-color', content='#009688')
     meta(name='msapplication-TileColor', content='#009688')
-    meta(name='msapplication-TileImage', content='/favicons/ms-icon-144x144.png')
+    meta(name='msapplication-TileImage', content=appconfig.host + '/favicons/ms-icon-144x144.png')
     title= appconfig.title
 
     // Favicon
     each favsize in [57, 60, 72, 76, 114, 120, 144, 152, 180]
-      link(rel='apple-touch-icon', sizes=favsize + 'x' + favsize, href='/favicons/apple-icon-' + favsize + 'x' + favsize + '.png')
-    link(rel='icon', type='image/png', sizes='192x192', href='/favicons/android-icon-192x192.png')
+      link(rel='apple-touch-icon', sizes=favsize + 'x' + favsize, href=appconfig.host + '/favicons/apple-icon-' + favsize + 'x' + favsize + '.png')
+    link(rel='icon', type='image/png', sizes='192x192', href=appconfig.host + '/favicons/android-icon-192x192.png')
     each favsize in [32, 96, 16]
-      link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize, href='/favicons/favicon-' + favsize + 'x' + favsize + '.png')
-    link(rel='manifest', href='/manifest.json')
+      link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize, href=appconfig.host + '/favicons/favicon-' + favsize + 'x' + favsize + '.png')
+    link(rel='manifest', href=appconfig.host + '/manifest.json')
 
     // JS / CSS
-    script(type='text/javascript', src='/js/vendor.min.js')
-    script(type='text/javascript', src='/js/app.min.js')
+    script(type='text/javascript', src=appconfig.host + '/js/vendor.js')
+    script(type='text/javascript', src=appconfig.host + '/js/app.js')
 
   body(class='is-forbidden')
     .container
-      a(href='/'): img(src='/images/logo.png')
+      a(href='/'): img(src=appconfig.host + '/images/logo.png')
       h1= t('errors:forbidden')
       h2= t('errors:forbiddendetail')
-      a.button.is-amber.is-inverted(href='/')= t('errors:actions.gohome')
-      a.button.is-amber.is-inverted(href='/login')= t('errors:actions.loginas')
+      a.button.is-amber.is-inverted(href=appconfig.host + '/')= t('errors:actions.gohome')
+      a.button.is-amber.is-inverted(href=appconfig.host + '/login')= t('errors:actions.loginas')
