--- a/server/views/pages/all.pug
+++ b/server/views/pages/all.pug
@@ -9,16 +9,16 @@ block content
         ul.sidebar-menu
           li
             a(href='/')
-              i.icon-home
+              i.nc-icon-outline.ui-1_home-minimal
               span= t('nav.root')
           if !isGuest
             li
               a(href='/admin')
-                i.icon-cog
+                i.nc-icon-outline.ui-1_settings-gear-63
                 span= t('nav.account')
           else
             li
               a(href='/login')
-                i.icon-unlock
+                i.nc-icon-outline.arrows-1_log-in
                 span= t('nav.login')
     tree
