feat: Color Theme page UI + color picker + toggle

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -14,6 +14,7 @@ $primary: 'indigo';
 @import 'components/alert';
 @import 'components/button';
 @import 'components/collapsable-nav';
+@import 'components/color-picker';
 @import 'components/footer';
 @import 'components/form';
 @import 'components/grid';
@@ -25,6 +26,7 @@ $primary: 'indigo';
 @import 'components/search';
 @import 'components/sidebar';
 @import 'components/table';
+@import 'components/toggle';
 @import 'components/typography';
 
 @import 'libs/nucleo-icons';
