--- a/server/views/pages/admin/profile.pug
+++ b/server/views/pages/admin/profile.pug
@@ -4,6 +4,7 @@ block adminContent
   .hero
     h1.title#title= t('nav.myprofile')
     h2.subtitle= t('admin:profile.subtitle')
+    i.pageicon.nc-icon-outline.business_business-contact-86
   .form-sections
     .columns.is-gapless
       .column.is-two-thirds
