--- a/server/views/pages/admin/stats.pug
+++ b/server/views/pages/admin/stats.pug
@@ -4,6 +4,7 @@ block adminContent
   .hero
     h1.title#title= t('nav.stats')
     h2.subtitle= t('admin:stats.subtitle')
+    i.pageicon.nc-icon-outline.ui-3_chart-bars
   .form-sections
     section
       label.label= t('admin:stats.entries')
