--- a/server/views/pages/admin/system.pug
+++ b/server/views/pages/admin/system.pug
@@ -4,6 +4,7 @@ block adminContent
   .hero
     h1.title#title= t('nav.sysinfo')
     h2.subtitle= t('admin:system.subtitle')
+    i.pageicon.nc-icon-outline.objects_planet
   admin-settings(inline-template)
     .form-sections
       section
