--- a/server/views/pages/admin/users-edit.pug
+++ b/server/views/pages/admin/users-edit.pug
@@ -13,6 +13,7 @@ block adminContent
       .hero
         h1.title= t('admin:users.edituser')
         h2.subtitle= usr.email
+        i.pageicon.nc-icon-outline.users_single-05
       table.table
         thead
           tr
