--- a/server/views/pages/admin/users.pug
+++ b/server/views/pages/admin/users.pug
@@ -11,6 +11,7 @@ block adminContent
   .hero
     h1.title#title= t('nav.users')
     h2.subtitle= t('admin:users.subtitle')
+    i.pageicon.nc-icon-outline.users_multiple-19
   table.table
     thead
       tr
