--- a/server/views/pages/admin/settings.pug
+++ b/server/views/pages/admin/settings.pug
@@ -4,3 +4,4 @@ block adminContent
   .hero
     h1.title#title= t('nav.syssettings')
     h2.subtitle= t('admin:settings.subtitle')
+    i.pageicon.nc-icon-outline.ui-1_settings-gear-63
