--- a/server/views/pages/admin/theme.pug
+++ b/server/views/pages/admin/theme.pug
@@ -4,6 +4,7 @@ block adminContent
   .hero
     h1.title#title= t('nav.theme')
     h2.subtitle= t('admin:theme.subtitle')
+    i.pageicon.nc-icon-outline.design_paint-37
   .form-sections
     section
       label.label= t('admin:theme.primarycolor')
@@ -12,6 +13,13 @@ block adminContent
       label.label= t('admin:theme.altcolor')
       color-picker(current-color='blue-grey')
     section
+      label.label= t('admin:theme.footercolor')
+      color-picker(current-color='blue-grey')
+    section
       label.label= t('admin:theme.codeblock')
       toggle(current-value='dark', desc='Use Dark Theme')
       toggle(current-value='dark', desc='Colorize code syntax')
+    section
+      button.button.is-green(@click='saveUser')
+        i.nc-icon-outline.ui-1_check
+        span= t('admin:profile.savechanges')
