--- a/server/views/common/footer.pug
+++ b/server/views/common/footer.pug
@@ -1,4 +1,4 @@
-footer.footer
+footer.footer(class=['is-' + appconfig.theme.footer])
   span
     = t('footer.poweredby') + ' '
     a(href='https://github.com/Requarks/wiki') Wiki.js
