--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -29,7 +29,7 @@ html
     block head
 
   body
-    #root.has-stickynav
+    #root.has-stickynav(class=['is-primary-' + appconfig.theme.primary, 'is-alternate-' + appconfig.theme.alt])
       include ./common/header.pug
       alert
       main
