feat: Color Theme page logic

--- a/server/views/pages/admin/_layout.pug
+++ b/server/views/pages/admin/_layout.pug
@@ -46,7 +46,7 @@ block content
                     span= t('nav.users')
                 li
                   a(href='/admin/theme')
-                    i.nc-icon-outline.design_paint-37
+                    i.nc-icon-outline.ui-1_drop
                     span= t('nav.theme')
                 li
                   a(href='/admin/settings')
