feat: Color Theme live preview

--- a/client/scss/components/nav.scss
+++ b/client/scss/components/nav.scss
@@ -9,6 +9,7 @@
 	box-shadow: 0 2px 3px rgba(mc($primary, '500'), 0.2);
 	z-index: 2;
 	color: #FFF;
+  transition: background-color 1s ease;
 
   /* THEME OVERRIDE - START */
 
