feat: history browse diffs

--- a/client/scss/components/sidebar.scss
+++ b/client/scss/components/sidebar.scss
@@ -46,6 +46,7 @@
 					font-size: 14px;
 					transition: all .4s ease;
 					line-height: 14px;
+          cursor: pointer;
 
           &.is-multiline {
             flex-wrap: wrap;
