fix: alert icons

--- a/server/views/pages/admin/profile.pug
+++ b/server/views/pages/admin/profile.pug
@@ -27,7 +27,7 @@ block adminContent
               label.label= t('admin:profile.displayname')
               p.control.is-fullwidth
                 input.input(type='text', placeholder=t('admin:profile.displaynameexample'), v-model='name')
-            section
+            //-section
               label.label #{t('admin:profile.tfa')}: #[strong.is-red(v-cloak) {{ tfaStatus }}] 
               button.button.is-blue(@click='$store.dispatch("modalProfile2fa/open")', :disabled='tfaIsActive')
                 i.nc-icon-outline.ui-1_circle-add
@@ -59,4 +59,4 @@ block adminContent
           label.label= t('admin:profile.lastprofileupdate')
           p.control= moment(user.updatedAt).format('LL')
 
-  modal-profile-2fa
+  //-modal-profile-2fa
