--- a/server/views/pages/admin/settings.pug
+++ b/server/views/pages/admin/settings.pug
@@ -5,3 +5,5 @@ block adminContent
     h1.title#title= t('nav.syssettings')
     h2.subtitle= t('admin:settings.subtitle')
     i.pageicon.nc-icon-outline.ui-1_settings-gear-63
+  .form-sections
+    section Coming soon
