--- a/server/views/pages/edit.pug
+++ b/server/views/pages/edit.pug
@@ -18,7 +18,7 @@ block content
     .columns.is-gapless
       .column.editor-area
         textarea(ref='editorTextArea', v-pre)= pageData.markdown
-      .column.editor-sd
+      //- .column.editor-sd
         .editor-sd-item Images
         .editor-sd-item Files
 
