fix: Safari js workaround

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -23,7 +23,7 @@ html
       var siteRoot = '!{appconfig.host}';
 
     //- JS / CSS
-    script(type='text/javascript', src=appconfig.host + '/js/vendor.js')
+    //- script(type='text/javascript', src=appconfig.host + '/js/vendor.js')
     script(type='text/javascript', src=appconfig.host + '/js/app.js')
 
     block head
