--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -18,7 +18,7 @@ block rootNavRight
     a.button.is-outlined(href='/source/' + pageData.meta.path)
       i.nc-icon-outline.education_paper
       span= t('nav.source')
-    a.button.is-outlined(href='/hist/' + pageData.meta.path)
+    //-a.button.is-outlined(href='/hist/' + pageData.meta.path)
       i.nc-icon-outline.ui-2_time
       span= t('nav.history')
     if rights.write
