fix: mathjax timeout + external link icons

--- a/client/scss/components/markdown-content.scss
+++ b/client/scss/components/markdown-content.scss
@@ -136,9 +136,9 @@
 			//align-items: center;
 
 			&:before {
-				content: $icon-open;
+				content: '\ee70';
 				display: inline-block;
-				font-family: 'core-icons';
+				font-family: 'Nucleo Outline';
 				font-style: normal;
 				font-weight: normal;
 				text-decoration: none;
