--- a/server/views/error-notexist.pug
+++ b/server/views/error-notexist.pug
@@ -18,7 +18,7 @@ html(data-logic='error')
     link(rel='manifest', href=appconfig.host + '/manifest.json')
 
     // JS / CSS
-    //- script(type='text/javascript', src=appconfig.host + '/js/vendor.js')
+    script(type='text/javascript', src=appconfig.host + '/js/vendor.js')
     script(type='text/javascript', src=appconfig.host + '/js/app.js')
 
   body(class='is-notexist')
