--- a/server/views/configure/index.pug
+++ b/server/views/configure/index.pug
@@ -13,7 +13,7 @@ html(data-logic='configure')
     script(type='text/javascript').
       var appconfig = !{JSON.stringify(conf)};
       var runmode = !{JSON.stringify(runmode)};
-    //- script(type='text/javascript', src='/js/vendor.js')
+    script(type='text/javascript', src='/js/vendor.js')
     script(type='text/javascript', src='/js/configure.js')
 
   body
