--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -12,6 +12,7 @@ $primary: 'indigo';
 @import "libs/animate";
 
 @import 'components/alert';
+@import 'components/body';
 @import 'components/button';
 @import 'components/collapsable-nav';
 @import 'components/color-picker';
