--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -72,8 +72,8 @@ block content
                 i.icon-arrow-up2
               +tocMenu(pageData.tree)
 
-        .column
-          .hero
+        .column.body
+          .hero          
             h1.title#title= pageData.meta.title
             if pageData.meta.subtitle
               h2.subtitle= pageData.meta.subtitle
