--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -15,7 +15,7 @@ block rootNavRight
       a.button.is-outlined(v-on:click='$store.dispatch("modalMovePage/open")')
         i.nc-icon-outline.arrows-1_shuffle-98
         span= t('nav.move')
-    if appconfig.theme.viewSource == "all" || rights.write && appconfig.theme.viewSource == "write"
+    if appconfig.theme.viewSource === "all" || rights.write && appconfig.theme.viewSource === "write"
       a.button.is-outlined(href='/source/' + pageData.meta.path)
         i.nc-icon-outline.education_paper
         span= t('nav.source')
