--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -42,6 +42,7 @@ $primary: 'indigo';
 @import 'layout/_header';
 @import 'layout/_loader';
 
-@import 'pages/_welcome';
+@import 'pages/login';
+@import 'pages/welcome';
 
 @import 'base/print';
