--- a/client/scss/components/button.scss
+++ b/client/scss/components/button.scss
@@ -4,7 +4,7 @@
 	border: 1px solid mc('orange','700');
 	border-radius: 3px;
 	display: inline-flex;
-	height: 30px;
+	height: 40px;
 	align-items: center;
 	padding: 0 15px;
 	font-size: 13px;
@@ -74,7 +74,13 @@
 
 	&.is-featured {
 		animation: btnInvertedPulse .6s ease alternate infinite;
-	}
+  }
+
+  &.is-fullwidth {
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+  }
 
 	&.is-disabled, &:disabled {
 		background-color: mc('grey', '300');
